# syft-syftui-example

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt  run.sh
backend/: __init__.py  main.py
frontend/: next.config.mjs  package.json
frontend/app/: layout.tsx  page.tsx
src/syft_syftui_example/: __init__.py  app.py  cron.py
