[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syft-syftui-example"
version = "0.1.0"
description = "Minimal SyftUI example app with frontend, backend, and cron job"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "OpenMined", email = "info@openmined.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
syft-syftui-example = "syft_syftui_example.app:main"

[project.urls]
Homepage = "https://github.com/OpenMined/syft-syftui-example"
Repository = "https://github.com/OpenMined/syft-syftui-example.git"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"] 